--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,15 +25,33 @@
             android:name="net.hockeyapp.android.appIdentifier"
             android:value="${HOCKEYAPP_APP_ID}" />
 
-        <activity android:name=".activities.SearchActivity">
+        <activity
+            android:name=".activities.SearchActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <meta-data android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+
         </activity>
-        <activity android:name=".activities.SearchResultsActivity" />
-        <activity android:name=".activities.RestaurantDetailsActivity" />
+
+        <activity android:name=".activities.SearchResultsActivity">
+        </activity>
+
+        <activity
+            android:name=".activities.RestaurantDetailsActivity"
+            android:label="@string/app_name">
+
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH"></action>
+            </intent-filter>
+
+        </activity>
+
         <activity android:name=".activities.FilterActivity" />
         <activity android:name=".activities.ReservationActivity" />
 
