--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,21 +36,18 @@
 
         </activity>
 
-        <activity android:name=".activities.SearchResultsActivity">
-        </activity>
-
-        <activity
-            android:name=".activities.RestaurantDetailsActivity"
+        <activity android:name=".activities.SearchResultsActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop">
-
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH"></action>
             </intent-filter>
 
             <meta-data android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
+        </activity>
 
+        <activity android:name=".activities.RestaurantDetailsActivity">
         </activity>
 
         <activity android:name=".activities.FilterActivity" />
