--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,9 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'net.hockeyapp.android:HockeySDK:3.5.0'
-    compile 'com.android.support:appcompat-v7:24.0.0-beta1'
+//    compile 'com.android.support:appcompat-v7:24.0.0-beta1'
+    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:design:23.4.0'
     compile 'com.google.android.gms:play-services:9.0.0'
     compile 'com.google.android.gms:play-services-ads:9.0.0'
     compile 'com.google.android.gms:play-services-auth:9.0.0'
