--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,30 +20,31 @@
 
         <!-- HockeyApp integration -->
 
+
          
+
         <meta-data
             android:name="net.hockeyapp.android.appIdentifier"
             android:value="${HOCKEYAPP_APP_ID}" />
 
-        <activity android:name=".activities.SearchResultsActivity"
+        <activity
+            android:name=".activities.SearchResultsActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop">
             <intent-filter>
-                <action android:name="android.intent.action.SEARCH"></action>
+                <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
-            <meta-data android:name="android.app.searchable"
+            <meta-data
+                android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
-
-        <activity android:name=".activities.RestaurantDetailsActivity">
-        </activity>
-
+        <activity android:name=".activities.RestaurantDetailsActivity"></activity>
         <activity android:name=".activities.FilterActivity" />
         <activity android:name=".activities.ReservationActivity" />
 
@@ -57,7 +58,7 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity android:name=".activities.RestaurantReviewsActivity"/>
+        <activity android:name=".activities.RestaurantReviewsActivity" />
     </application>
 
 </manifest>
