--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,9 +53,11 @@
         <!-- HockeyApp -->
         <activity android:name="net.hockeyapp.android.FeedbackActivity" />
 
+        <!-- com.google.android.geo.API_KEY is sufficient for both Maps and Places API -->
         <meta-data
-            android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyCWNPnvPa4nOcmuuIO5ordNDvZVjsJ_Lk0" />
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAxTQVETXcCLVb8Rc16GbGS6q8QooJQfQ0"/>
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
